Fixed text spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -104,14 +104,14 @@ p{
   width: 275px;
 }
 
-.profile-desc{
+.section-desc{
   margin: auto;
   width: 40%;
 }
 
 .section-row{
   margin: 100px auto 100px auto;
-  text-align: left;
+  text-align: justify;
   width: 50%;
 }
 
@@ -196,7 +196,7 @@ p{
   color: white;
   font-size: 20px;
   font-weight: bold;
-  margin: 0 0 30px 0;
+  margin: 30px 0;
   padding: 13px 32px;
   text-decoration: none;
   text-shadow: 0 1px 0 #276873;
